--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -1,7 +1,28 @@
 .profile {
-    background: linear-gradient(to bottom, #f4f0ed 0%, #e0dcd9 30%, #f4f0ed 100%);
-  }
+  background: linear-gradient(to bottom, #f4f0ed 0%, #e0dcd9 30%, #f4f0ed 100%);
+}
 
-  .profile_header::after, .profile_header::before {
-    
-  }
+.profile_header::after,
+.profile_header::before {
+}
+
+.content_wrapper {
+  border-radius: 30px;
+  outline: 15px solid #991ff180;
+  position: relative;
+}
+
+.content_wrapper::after {
+  z-index: -1;
+  mix-blend-mode: color;
+  content: "";
+  background: linear-gradient(
+    120deg,
+    rgb(62, 62, 62),
+    rgb(109, 109, 109),
+    rgb(62, 62, 62)
+  );
+  position: absolute;
+  inset: 0;
+  border-radius: 30px;
+}
