--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -2,27 +2,12 @@
   background: linear-gradient(to bottom, #f4f0ed 0%, #e0dcd9 30%, #f4f0ed 100%);
 }
 
-.profile_header::after,
-.profile_header::before {
-}
-
 .content_wrapper {
   border-radius: 30px;
-  outline: 15px solid #991ff180;
+  outline: 2px groove #991ff180;
   position: relative;
-}
+  background-color: rgb(0, 0, 0);
 
-.content_wrapper::after {
-  z-index: -1;
-  mix-blend-mode: color;
-  content: "";
-  background: linear-gradient(
-    120deg,
-    rgb(62, 62, 62),
-    rgb(109, 109, 109),
-    rgb(62, 62, 62)
-  );
-  position: absolute;
-  inset: 0;
-  border-radius: 30px;
+  background-size: 2rem 2rem, 1rem 1rem, 5rem 5rem;
+  background-position: 5.25rem 5.25rem, 2.5rem 2.5rem, 2.5rem 2.5rem;
 }
