--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -1,13 +1,56 @@
 .profile {
-  background: linear-gradient(to bottom, #f4f0ed 0%, #e0dcd9 30%, #f4f0ed 100%);
-}
-
-.content_wrapper {
-  border-radius: 30px;
-  outline: 2px groove #991ff180;
   position: relative;
   background-color: rgb(0, 0, 0);
+  background-image: radial-gradient(
+      circle at 50% 50%,
+      transparent 20%,
+      rgb(0, 0, 0, 0.9)
+    ),
+    radial-gradient(circle, rgb(0, 0, 0) 1rem, transparent 1rem),
+    linear-gradient(rgb(100, 20, 255) 0.5rem, transparent 0.5rem),
+    linear-gradient(90deg, rgb(0, 0, 0) 0.5rem, transparent 1.5rem);
+  background-size: 100% 100%, 1.4rem 2rem, 1rem 1rem, 5rem 5rem;
+  background-position: 100% 100%, 5.25rem 5.25rem, 2.5rem 2.5rem, 2.5rem 2.5rem;
+}
 
-  background-size: 2rem 2rem, 1rem 1rem, 5rem 5rem;
-  background-position: 5.25rem 5.25rem, 2.5rem 2.5rem, 2.5rem 2.5rem;
+.profile_setup_iconlist {
+  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  overflow: overlay;
+  padding: 20px;
+  row-gap: 30px;
+  align-items: center;
+  justify-content: center;
+  max-height: 320px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  box-shadow: inset 1px 1px 5px rgb(0, 0, 0, 0.5),
+    inset -1px -1px 5px rgb(0, 0, 0, 0.5), 1px 1px 1px rgb(0, 0, 0, 0.5),
+    -1px -1px 1px rgb(0, 0, 0, 0.5);
+  border: 5px solid transparent;
+  scrollbar-color: black blue;
+  scrollbar-width: thin;
+}
+
+.profile_setup_iconlist::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+.profile_setup_iconlist::-webkit-scrollbar-track {
+  background: rgb(35, 35, 35);
+  border-radius: 20px;
+  margin: 30px 0;
+  background-clip: content-box;
+}
+
+.profile_setup_iconlist::-webkit-scrollbar-thumb {
+  background-color: rgb(200, 200, 200);
+  border-radius: 20px;
+  border: 3px solid rgb(35, 35, 35);
+}
+.profile_setup_iconlist::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(100, 100, 100);
+  border-radius: 20px;
+}
+.profile_setup_iconlist::-webkit-scrollbar-track-piece {
 }
