--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -129,7 +129,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: url("../assets/multicolored-1.jpg");
+  background: url("/multicolored-1.jpg");
   z-index: -2;
   background-repeat: no-repeat;
   background-size: 900px 600px;
