--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -17,6 +17,10 @@
   box-shadow: 1px 2px 5px rgb(50, 50, 50);
 }
 
+.task_wall_nav {
+  position: relative;
+}
+
 @media screen and (max-width: 640px) {
   .dashboard {
     padding: 0 50px;
