--- a/server/client/src/styles/profile.css
+++ b/server/client/src/styles/profile.css
@@ -3,19 +3,27 @@
   background-color: rgb(0, 0, 0);
   background-image: radial-gradient(
       circle at 50% 50%,
-      transparent 20%,
+      transparent 10%,
       rgb(0, 0, 0, 0.9)
     ),
-    radial-gradient(circle, rgb(0, 0, 0) 1rem, transparent 1rem),
-    linear-gradient(rgb(100, 20, 255) 0.5rem, transparent 0.5rem),
-    linear-gradient(90deg, rgb(0, 0, 0) 0.5rem, transparent 1.5rem);
-  background-size: 100% 100%, 1.4rem 2rem, 1rem 1rem, 5rem 5rem;
-  background-position: 100% 100%, 5.25rem 5.25rem, 2.5rem 2.5rem, 2.5rem 2.5rem;
+    url("public/multicolored-6.jpg");
+  background-position: 100% 100%, center;
 }
 
 .profile_setup_picture {
   display: grid;
   grid-template-columns: 100px 1fr;
+}
+
+.performance,
+.profile_setup_content,
+.profile_setup_content * {
+  -webkit-backface-visibility: hidden !important;
+  -webkit-perspective: 1000 !important;
+  -webkit-transform: translate3d(0, 0, 0) translateZ(0) !important;
+  backface-visibility: hidden !important;
+  perspective: 1000 !important;
+  transform: translateZ(0) translate3d(0, 0, 0) !important;
 }
 
 .profile_setup_iconlist {
@@ -61,6 +69,20 @@
 
 .profile_edit {
   background: linear-gradient(60deg, #f4f0ed 0%, #e0dcd9, #f4f0ed 100%);
+}
+
+@media screen and (max-width: 640px) {
+  .profile {
+    position: relative;
+    background-color: rgb(0, 0, 0);
+    background-image: radial-gradient(
+        circle at 50% 50%,
+        transparent 10%,
+        rgb(0, 0, 0, 0.9)
+      ),
+      url("public/multicolored-6.jpg");
+    background-position: 100% 100%, center;
+  }
 }
 
 @media screen and (max-width: 448px) {
