--- a/server/client/src/styles/privacy.css
+++ b/server/client/src/styles/privacy.css
@@ -44,13 +44,8 @@
   position: absolute;
 }
 
-.privacy_2nd::grid {
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-}
-
 .privacy_2nd_grid::before {
   z-index: 10;
-  mix-blend-mode: hard-light;
   inset: 0;
   height: 50%;
   bottom: 20%;
@@ -62,12 +57,13 @@
 
 .privacy_2nd_grid::after {
   z-index: 10;
-  mix-blend-mode: hard-light;
+  /* mix-blend-mode: hard-light; */
   inset: 0;
   top: 50%;
   height: 50%;
   content: "";
   background: rgb(0, 0, 0, 0.5);
+  backdrop-filter: blur(.5px);
   position: absolute;
 }
 
